[package]
name = "nkn-sdk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
bytes = "1.4.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
rand = "0.7.0"
rust-crypto = "0.2.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
