[package]
name = "nkn-sdk-rust"
version = "0.1.0"
edition = "2021"

#[lib]
#name = "nkn_sdk_rust"
#crate-type = ["staticlib","cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
bytes = "1.4.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
rand = "0.7.0"
rust-crypto = "0.2.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"
sodiumoxide = "0.2.7"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "io-std", "rt", "macros"] }
tokio-tungstenite = "*"
url = "2"
futures = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "*"
flate2 = "*"
moka = { version = "0.11", features = ["future"] }
regex = "*"
crossbeam-channel = "*"
tokio-context = "*"


[build-dependencies]
prost-build = { version = "0.11" }

